--- a/config/influxdb/development.toml
+++ b/config/influxdb/development.toml
@@ -81,7 +81,7 @@ enabled = false
 [broker]
 enabled = true
 # Where the Raft logs are stored. The user running InfluxDB will need read/write access.
-dir  = "~/.influxdb/broker"
+dir  = ".influxdb/broker"
 truncation-interval = "10m"
 max-topic-size = 52428800
 max-segment-size = 10485760
@@ -97,7 +97,7 @@ reconnect-timeout = "10ms"
 # shards, is stored.
 [data]
 enabled = true
-dir = "~/.influxdb/db"
+dir = ".influxdb/db"
 
 # Auto-create a retention policy when a database is created. Defaults to true.
 retention-auto-create = true
